@@ -117,7 +117,7 @@ L["Other"] = true
 L["Other options"] = true
 L["Part %d"] = true
 L["Parts"] = true
-L["Please post bugs or suggestions at the CurseForge forums thread at |cFF00FFFFhttp://www.curseforge.com/wow/addons/postal/issues|r. When posting bugs, indicate your locale and Postal's version number v%s."] = true
+L["Please post bugs or suggestions at |cFF00FFFFhttps://github.com/paradosi/postal_tbc_anniversary/issues|r. When posting bugs, indicate your locale and Postal's version number v%s."] = true
 L["Prints the amount of money collected during a mail session."] = true
 L["Processing Message"] = true
 L["Profile"] = true
